# CMakeFileEmbedder

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: AddEmbeddedFiles.cmake  AddMainExecutableFile.cmake  CMakeFileEmbedder.cmake  CMakeFileEmbedderConfig.cmake.in  CMakeFileEmbedderTargets-debug.cmake  GenerateMainWrapper.cmake
lib/: libMinHook.x32.lib  libMinHook.x32d.lib  libMinHook.x64.lib  libMinHook.x64d.lib
src/: embedded_files.h  pLinuxHook.cpp  pWindowsHook.cpp
